# ComfyUI-Lun-Qwen3-tts

./: .gitignore  LICENSE  README.md  __init__.py  config.json  pyproject.toml  requirements.txt  test_workflows.py  test_workflows_api.py  verify_node.py
example_workflows/: basic_custom_voice.json  voice_clone.json  voice_design.json
qwen3_nodes/: __init__.py  custom_voice.py  model_loader.py  voice_clone.py  voice_design.py
qwen3_utils/: __init__.py  constants.py  model_cache.py
