[project]
name = "ComfyUI-Lun-Qwen3-tts"
description = "Qwen3-TTS Text-to-Speech nodes for ComfyUI. Support custom voice (9 speakers), voice design (text-to-voice), and voice cloning from reference audio."
version = "1.0.0"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "qwen-tts>=0.1.0",
    "torch",
    "numpy",
]

readme = "README.md"

[project.urls]
Repository = "https://github.com/ruanjianlun/ComfyUI-Lun-Qwen3-tts"

[tool.comfy]
PublisherId = "ruanjianlun"
DisplayName = "Qwen3-TTS"
Icon = "https://raw.githubusercontent.com/ruanjianlun/ComfyUI-Lun-Qwen3-tts/main/comfyui_ui.png"
